# drum_practice

./: .gitignore  Cargo.toml  README.org  Rocket.toml  dev  index.js  package-lock.json  package.json
frontend/: .eslintrc.json  jest.config.js  package-lock.json  package.json  webpack-dev.config.js  webpack-prod.config.js  webpack.config.js
frontend/src/: app.js  index.js  routes.js  use-observable.js
frontend/src/components/: use-ajax.js
frontend/src/pages/: songs-list.js
public/: 404.css  404.html  index.html
server/: Cargo.toml
server/src/: args.rs  database.rs  main.rs  routes.rs  songs.rs
server/static/: index.html
src/: base.js  index.js
src/actions/: songs.js
src/components/: context.js  footer.js  header.js
src/components/drum-practice/: drum-practice.css  drum-practice.test.js  index.js
src/components/drum-practice/__snapshots__/: drum-practice.test.js.snap
src/components/song/: index.js  song.css
src/components/song-list/: index.js
src/components/youtube-form/: index.js  youtube-form.css
src/containers/: drum-practice.js
src/containers/song-list/: index.js
src/containers/youtube-form/: index.js
src/layouts/: main.js
src/reducers/: index.js  songs.js
tailwind/: package-lock.json  package.json
