[package]
name = "drum_practice"
version = "0.1.0"
authors = ["Ricky Nelson <rickyn@socketwiz.com>"]

[dependencies]
dotenv = "0.9.0"
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rusqlite = "0.14.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"

[dependencies.rocket_contrib]
version = "0.3.17"
default_features = false
features = ["json"]

