[package]
name = "drum_practice"
version = "0.1.0"
authors = ["Ricky Nelson <rickyn@socketwiz.com>"]

[dependencies]
dotenv = "0.15.0"
rocket = "0.4.2"
rusqlite = "0.20.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"

[dependencies.rocket_contrib]
version = "0.4.2"
default_features = false
features = ["json", "serve"]

