[package]
name = "drum_practice"
version = "0.1.0"
authors = ["Ricky Nelson <rickyn@socketwiz.com>"]

[dependencies]
dotenv = "0.15.0"
rocket = "0.4.10"
rusqlite = "0.26.0"
shellexpand = "2.1"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

[dependencies.rocket_contrib]
version = "0.4.10"
default_features = false
features = ["json", "serve"]

